--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,7 +29,9 @@
         <input type="date"><br>
         <label>Your Message</label><br>
         <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
-        <input type="submit" name="">
+        <input type="submit" name=""><br>
+        <label>Password</label>
+        <input type="password">
 
     </form>
 </body>
